--- a/_talks/2021-10-13-seminar.md
+++ b/_talks/2021-10-13-seminar.md
@@ -1,7 +1,7 @@
 ---
 title: "Group Seminar: Offline Reinforcement Learning"
 collection: talks
-type: "Talk"
+type: "Seminar"
 permalink: /talks/2012-03-01-talk-1
 venue: "PKU, BICMR"
 date: 2021-10-13
